# omniference

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  ollama.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: adapter.rs  lib.rs  router.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/skins/: Cargo.toml
crates/skins/src/: context.rs  openai.rs
examples/: discord_bot.rs  embedded_axum.rs  library_usage.rs  standalone_server.rs  test_model_discovery.rs  test_openai_compat.rs  test_openai_responses.rs  usage_examples.rs
src/: adapter.rs  engine.rs  lib.rs  main.rs  router.rs  server.rs  service.rs  stream.rs  types.rs
src/adapters/: mod.rs  ollama.rs  openai_compat.rs  openai_responses.rs
src/config/: helpers.rs  mod.rs
src/skins/: context.rs  lib.rs  mod.rs  openai.rs
src/types/: mod.rs
src/types/providers/: mod.rs  ollama.rs  openai.rs  openai_compatible.rs
tests/adapters/: main.rs
tests/config/: README.md  openai_responses_test_config.md  test_config.example.json  test_config.rs
tests/integration/: main.rs  test_openai_responses_endpoint.rs
tests/legacy/: legacy_test_model_discovery.rs  legacy_test_openai_compat.rs  legacy_test_openai_responses.rs
tests/skins/: main.rs
