[package]
name = "inference-engine"
version = "0.1.0"
edition = "2021"
description = "A multi-protocol inference engine with provider adapters"
license = "MIT"
repository = "https://github.com/yourusername/inference-engine"
readme = "README.md"

[workspace]
members = [
    "crates/engine-core",
    "crates/adapters",
    "crates/skins",
    "crates/gateway",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = "1.4"

# Async utilities
tokio-util = "0.7"
tokio-stream = "0.1"

# Bytes
bytes = "1.7"

# Other
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"