[package]
name = "omniference"
version = "0.1.0"
edition = "2021"
description = "A multi-protocol inference engine with provider adapters"
license = "MIT"
repository = "https://github.com/yourusername/omniference"
readme = "README.md"
keywords = ["ai", "llm", "inference", "ollama", "openai"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# HTTP/server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = "1.4"

# Async utilities
tokio-util = "0.7"
tokio-stream = "0.1"
async-stream = "0.3"

# Bytes
bytes = "1.7"

# Other
uuid = { version = "1.10", features = ["v4", "serde"] }

# Discord integration (optional)
serenity = { version = "0.12", optional = true, default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }

[[bin]]
name = "omniference"
path = "src/main.rs"

[[example]]
name = "usage_examples"
path = "examples/usage_examples.rs"

[[example]]
name = "library_usage"
path = "examples/library_usage.rs"

[[example]]
name = "embedded_axum"
path = "examples/embedded_axum.rs"

[[example]]
name = "discord_bot"
path = "examples/discord_bot.rs"
required-features = ["discord"]

[[example]]
name = "standalone_server"
path = "examples/standalone_server.rs"

[features]
default = []
discord = ["dep:serenity"]

[[test]]
name = "integration_tests"
path = "tests/integration/main.rs"

[[test]]
name = "adapter_tests"
path = "tests/adapters/main.rs"

[[test]]
name = "skin_tests"
path = "tests/skins/main.rs"

[[test]]
name = "config_tests"
path = "tests/config/test_config.rs"
