[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
bytes = { workspace = true }
async-stream = "0.3"