[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }
adapters = { path = "../adapters" }
skins = { path = "../skins" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }